# pgmg

./: Cargo.toml  README.md  README_LIBRARY.md  TLS.md  err.dot  pgmg.toml  pgmg.toml.example  test_runner.sh
.github/workflows/: release.yml
examples/: main_with_logging.rs  migration_guide.md  server_startup.rs
migrations/: 001_test_migration.sql  00_currency.sql  00_extensions.sql  00_init.sql  00_mq.sql  00_schema.sql  01_auth.sql  03_seller_info.sql  04_category.sql  05_product.sql  06_item.sql  07_purchase.sql  08_feedback.sql  10_exchange_rate.sql  11_wishlist.sql  13_image.sql  20250720011037_test_migration.sql
src/: builtin_catalog.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  notify.rs  output.rs  plpgsql_check.rs
src/analysis/: graph.rs  mod.rs
src/commands/: apply.rs  check.rs  mod.rs  new.rs  plan.rs  reset.rs  run.rs  seed.rs  test.rs  watch.rs
src/db/: connection.rs  locks.rs  mod.rs  scanner.rs  state.rs  test_utils.rs  tls.rs
src/sql/: migration_analyzer.rs  mod.rs  objects.rs  parser.rs  splitter.rs  test_analyzer.rs
test_deps/sql/: function.sql  trigger.sql
tests/: integration_concurrency.rs  line_tracking_test.rs  notify_integration.rs  test_apply_command.rs  test_comment_deletion_order.rs  test_comment_display.rs  test_comment_parent_dropped.rs  test_dependency_tracking.rs  test_duplicate_objects.rs  test_e2e_workflows.rs  test_error_handling.rs  test_function_overload_cleanup.rs  test_library_api.rs  test_migration_column_drop.rs  test_operators.rs  test_plan_command.rs  test_plpgsql_check.rs  test_trigger_comment_cleanup.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs  plan_output.rs
