[package]
name = "pgmg"
version = "0.1.0"
edition = "2021"

[lib]
name = "pgmg"
path = "src/lib.rs"

[[bin]]
name = "pgmg"
path = "src/main.rs"

[features]
default = []
tls = ["tokio-postgres-rustls", "rustls", "webpki-roots", "rustls-pemfile"]

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = { version = "0.7.13" }
postgres-types = { version = "0.2.9", features = ["derive"] }
futures-util = "0.3.31"
pg_query = { path = "../pg_query.rs" }
regex = "1.10.2"
serde_json = "1.0"
clap = { version = "4.5.41", features= ["derive"]}
petgraph = "0.6"
sha2 = "0.10"
notify = "6.0"
toml = "0.8"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "fmt"] }
color-eyre = "0.6"
console = "0.15"
owo-colors = "4.0"
tap_parser = "0.1"

# Optional TLS dependencies
tokio-postgres-rustls = { version = "0.12", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
webpki-roots = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
tokio-test = "0.4"
once_cell = "1.19"
indoc = "2.0"
uuid = { version = "1.6", features = ["v4"] }