[package]
name = "pgmg"
version = "0.1.0"
edition = "2021"

[lib]
name = "pgmg"
path = "src/lib.rs"

[[bin]]
name = "pgmg"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:owo-colors", "dep:console", "dep:color-eyre"]
tls = ["tokio-postgres-rustls", "rustls", "webpki-roots", "rustls-pemfile"]

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = { version = "0.7.13" }
postgres-types = { version = "0.2.9", features = ["derive"] }
futures-util = "0.3.31"
pg_query = { path = "../pg_query.rs" }
regex = "1.10.2"
serde_json = "1.0"
clap = { version = "4.5.41", features= ["derive"], optional = true }
petgraph = "0.8"
sha2 = "0.10"
notify = "8.1"
toml = "0.9"
url = "2.5"
percent-encoding = "2.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "fmt"] }
color-eyre = { version = "0.6", optional = true }
console = { version = "0.16", optional = true }
owo-colors = { version = "4.0", optional = true }

# Optional TLS dependencies
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
webpki-roots = { version = "1.0.2", optional = true }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
testcontainers = { version = "0.15", features = ["watchdog"] }
testcontainers-modules = { version = "0.1", features = ["postgres"] }
once_cell = "1.19"
indoc = "2.0"
uuid = { version = "1.6", features = ["v4"] }
ctrlc = "3.4"